# codellama

./: launch_api.sh  pyproject.toml
api/: Client.ipynb  main.py  test.py
llama/: model.py
