[tool.poetry]
name = "codellama"
version = "0.1.0"
description = ""
authors = ["Meta AI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.1.1"
fairscale = "^0.4.13"
fire = "^0.5.0"
sentencepiece = "^0.1.99"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
usort = "^1.0.7"
ufmt = "^2.3.0"
mypy = "^1.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
